@@ -1,5 +1,9 @@
 2007-05-16  Robert Ancell  <robert.ancell@gmail.com>
 
+	* Don't animate rotation on startup or when changing between 2/3D
+
+2007-05-16  Robert Ancell  <robert.ancell@gmail.com>
+
 	* src/lib/cairo/__init__.py: Speed up 2D rotating
         * Add board numbering for 2D mode (Bug #392286)
 
